--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "backend server for crypto nft",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/lakshya-20/crypto-nfts/issues"
   },
-  "homepage": "https://github.com/lakshya-20/crypto-nfts#readme"
+  "homepage": "https://github.com/lakshya-20/crypto-nfts#readme",
+  "dependencies": {
+    "ethereumjs-util": "^7.1.4",
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.3.3"
+  }
 }
