--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/lakshya-20/crypto-nfts#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "ethereumjs-util": "^7.1.4",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
