--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
     "ipfs-http-client": "^56.0.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.1",
+    "reactstrap": "^9.0.2",
     "web-vitals": "^2.1.4",
     "web3": "^1.7.3"
   },
