--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
+    "react-multi-carousel": "^2.8.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.1",
     "reactstrap": "^9.0.2",
