--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "ethereumjs-util": "^7.1.4",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.3"
+    "mongoose": "^6.3.3",
+    "nodemon": "^2.0.16"
   }
 }
