--- a/smart-contract/package.json
+++ b/smart-contract/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "@openzeppelin/contracts": "^4.6.0"
+    "@openzeppelin/contracts": "^4.6.0",
+    "dotenv": "^16.0.1",
+    "truffle-hdwallet-provider": "^1.0.17"
   }
 }
